--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,14 @@ h1 {
     margin: 35px auto;
 }
 
+.peso-normal {
+    color: green;
+}
+
+.peso-risco {
+    color: red;
+}
+
 .como__calcular {
     margin-bottom: 20px;
 }
